Revert "Added spring shell"
c2b20f162a28eb3297f7aaeb561cbe0ae9001e48

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,4 @@ supported-locales:
   - ru
   - en
 
-start: false
-
-spring:
-  profiles:
-    active: shell
-  shell:
-    interactive:
-      enabled: true
+start: true
